--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arber-webapp",
-  "homepage": "https://mayuransundar.github.io/DreamPhysique",
+  "homepage": "/DreamPhysique/#",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
